# old-norwegian-dictionary-rs

./: Cargo.toml  README.md
src/: lib.rs
src/dictionary/: dictionary_entry.rs  mod.rs
src/reader/: mod.rs
src/reader/fixtures/: test.json
tests/: integration_tests.rs
