[package]
name = "old_norwegian_dictionary"
version = "1.0.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/old-norwegian-dictionary-rs"
description = """
Old Norwegian/Norse Dictionary for Rust. The dictionary consists of 40 000+ Old Norse words with Norwegian translations.
"""
edition = "2018"
exclude = ["tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.8.0"
